[package]
name = "lab_02_sha256"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Лабораторная № 2: собственная реализация SHA-2-256 по FIPS 180-4, без сторонних библиотек."

[dependencies]
shared = { workspace = true }
tracing = { workspace = true }
color-eyre = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true

[[bin]]
name = "lab_02_sha256"
path = "src/main.rs"
