[package]
name = "lab_03_prng"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Лабораторная № 3: генератор ПДСЧ (xorshift64*) на ≥ 200 значений с записью в файл для прогона через NIST STS 2.1.2."

[dependencies]
shared = { workspace = true }
tracing = { workspace = true }
color-eyre = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true

[[bin]]
name = "lab_03_prng"
path = "src/main.rs"

[lib]
name = "lab_03_prng"
path = "src/lib.rs"
