[package]
name = "practice_01"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Практика 1: длинная арифметика (сложение/вычитание чисел ≥ 64 разрядов) с проверкой против встроенной i128."

[dependencies]
shared = { workspace = true }
tracing = { workspace = true }
color-eyre = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true

[[bin]]
name = "practice_01"
path = "src/main.rs"
